[gd_scene load_steps=10 format=2]

[ext_resource path="res://Code/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/Placeholder/UI/Main Menu Background.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/UI/Play-button.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/Credits-Button.png" type="Texture" id=5]
[ext_resource path="res://Audio/Start_Menu_Music.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/Mouse_Overlapping.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 3 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.99
margin_left = 120.0
margin_top = -200.0
margin_right = -120.0
margin_bottom = -94.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 784.0
margin_bottom = 569.0
custom_constants/separation = 140

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 784.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Name Here"
align = 1

[node name="Play_Button" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( 379.187, 233.065 )
scale = Vector2( 1.21416, 1.34463 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Play Button" type="Button" parent="MarginContainer/VBoxContainer/Play_Button"]
margin_left = -161.0
margin_top = -46.0
margin_right = 154.0
margin_bottom = 59.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Credits_Button" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( 379.187, 395.559 )
scale = Vector2( 1.21416, 1.34463 )
texture = ExtResource( 5 )

[node name="Credits Button" type="Button" parent="MarginContainer/VBoxContainer/Credits_Button"]
margin_left = -161.0
margin_top = -42.0
margin_right = 153.0
margin_bottom = 59.0
flat = true

[node name="Play" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 418.0
margin_right = 784.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Play"
align = 1

[node name="Transition" type="Tween" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
autoplay = true

[node name="Mouse Button Overlap SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play_Button/Play Button" to="." method="_on_Play_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Play_Button/Play Button" to="." method="_on_Play_Button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play_Button/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Credits_Button/Credits Button" to="." method="_on_Credits_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Credits_Button/Credits Button" to="." method="_on_Credits_Button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits_Button/Credits Button" to="." method="_on_Credits_Button_pressed"]
